--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,8 +1,6 @@
-<h1>Books</h1>
-
-
 <h2>New Book</h2>
-<%= form_with model: Book.new do |f| %>
+<%= form_with model: @book,url:'/books',method: :post do |f| %>
+  
   <h4>Title</h4>
   <%= f.text_field :title %>
 
