--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Books</h1>
 
-<%= @books.each do |book| %>
+<% @books.each do |book| %>
   <p>Title</p>
-  <span><%= book.title %></span>
+  <span>
+    <%= link_to book.title, book_path(book.id) %>
+  </span>
+  
 
-  <p>Body</p>
-  <span><%= book.body %></span>
 <% end %>
