--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,6 @@
 <h4>Body:<p><%= @book.body %></p>
 </h4>
 
-<%= link_to "edit",edit_book_path(@book.id) %>
-<%= link_to "destroy",book_path(@book.id), method: :delete,"date-confirm" => "本当に削除しますか？"%>
+<%= link_to "Edit",edit_book_path(@book.id) %>
+<%= link_to "Back", :back %>
 
