--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,7 +10,9 @@
 
   <%= f.submit 'Update Book' %>
 
-<% end %>
 
-<%= link_to "Show",new_book_path(@book.id) %>
-<%= link_to "Back", :back %>
+
+<%= link_to "Show",
+<%= link_to "Back",new_book_path %>
+
+<% end %>
