--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,26 @@
 <h1>Books</h1>
 
-<% @books.each do |book| %>
-  <p>Title</p>
-  <h3><%= book.title %></h3>
-  <h3><%= book.body %><h3>
-    <%= link_to "Show", book_path(book.id) %>
-    <%= link_to "Edit", edit_book_path(book.id) %>
-    <%= link_to "Destroy", book_path(book.id), method: :delete,"data-confirm" => "Are you sure?" %>
-    
+<table>
+  <thead>
+   <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th></th>
+   </tr>
+  </thead>
+ <tbody>
+  <% @books.each do |book| %>
+   <tr>
+     <td><%= book.title %></td>
+     <td><%= book.body %></td>
+     <td>
+       <%= link_to "Show", book_path(book.id) %>
+       <%= link_to "Edit", edit_book_path(book.id) %>
+       <%= link_to "Destroy",book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+     </td>
+   </tr>  
+  <% end %>
+ </tbody>
+</table>
 
-<% end %>
+<%= render 'form' %>
