--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,11 +24,11 @@
 </table>
 
 <h2>New Book</h2>
-<% if book.present? && book.errors.any? %>
+<% if @book.errors.any? %>
   <div id="error_explanation">
-    <h3><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h3>
+    <h3><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h3>
     <ul>
-      <% book.errors.full_messages.each do |message| %>
+      <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
